Changes for 3.0.11rc1

New features:

Bug fixes:
........S. [ZBX-12446] fixed discovery and auto registration to accept empty DNS names (vso)
.......PS. [ZBX-12224] fixed connection to Oracle database when database server gives out warnings (gleb)
...G...PS. [ZBX-12195] fixed contamination of script output with Zabbix'es own log messages when logging level is set to 4 or 5 and LogType=console (gleb)
...G...... [ZBX-12270] fixed processing of AIX item 'system.stat[ent]' in agent; thanks to Marc for patch (Andris)
..F....... [ZBX-12277] fixed trigger expression test form incorrectly replacing macros (Ivo)

--------------------------------------------------------------------------------
Changes for 3.0.10

New features:
A.F....... [ZBX-1357] updated Chinese (China), English (United States), Japanese, Korean, Polish, Portuguese (Brazil), Russian, Ukrainian translations; thanks to Zabbix translators (zalex_ua)

--------------------------------------------------------------------------------
Changes for 3.0.10rc1

New features:
A.F....... [ZBX-1357] updated Chinese (China), Czech, English (United States), Korean, Romanian, Ukrainian, Vietnamese translations; thanks to Zabbix translators (zalex_ua)
.......PS. [ZBXNEXT-3659] reduced cache locking time during configuration synchronization (wiper)

Bug fixes:
........S. [ZBX-12349] fixed security vulnerability with execution of the remote commands on server; thanks to MATSUDA Daiki, Ron Waisberg for report (vso)
...G...... [ZBX-12231] fixed memory leak in agent if log[], logrt[] items use global regexps with multiple subexpressions (Andris)
...G...... [ZBX-12187] fixed memory leak when using UserParameter with suppressed characters passed in arguments (viktors)
........S. [ZBX-12328] fixed collecting value of VMware host memory balloon size (viktors)
..F....... [ZBX-12305] fixed incorrectly escaped IT Service parent name (Ivo)